[package]
name = "rinha-de-backend-2024-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "postgres"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
